<resources>

    <string name="app_name">阳光书屋</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">阳光书屋</string>
    <string name="my_resources">我的资料库</string>
    <string name="search_resources">搜索...</string>
    <string name="res_reading">正在阅读</string>
    <string name="res_readed">阅读历程</string><string name="res_learn_new">温故知新</string><string name="res_all_resources">全部资料</string>
    <string name="res_recent_downloaded">最近下载</string>
    <string name="empty"></string>

    <string-array name="main_menu">
        <item>我的资料库</item>
        <item>下载中心</item>
    </string-array>

    <string name="grid_list_builder">创建者</string>
    <string name="grid_list_count1">共有</string>
    <string name="grid_list_count2">本书</string>
    <string name="grid_list_intro">书单简介：</string>
    <string name="download_recommend">阳光推荐</string>
    <string name="download_category">分类浏览</string>
    <string name="download_hot">热门资源</string><string name="download_like">可能喜欢</string><string name="download_list">阳光书单</string><string name="title_activity_resource_info">ResourceInfo</string>
    <string name="info_page_name">图书信息</string>
    <string name="info_originname">原作名：</string>
    <string name="info_author">作者：</string>
    <string name="info_translator">译者：</string>
    <string name="info_publisher">出版社：</string>
    <string name="info_publish_year">出版年：</string>
    <string name="info_restitle">TITLE</string>
    <string name="info_author_intro">作者简介 · · · · ·</string>
    <string name="info_intro">导读 · · · · ·</string>
    <string name="info_button_down">下载</string>
    <string name="info_button_read">阅读</string>
    <string name="download_search">搜索结果</string>
    <string name="tip_null">没有可以显示的数据！</string>
    <string name="reader_not_found">未找到阅读器应用</string>
    
    
    
    
    

</resources>