<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"
    android:background="@color/chrome_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/chrome"
        android:padding="@dimen/padding_zero" >

        <ImageButton
            android:id="@+id/info_back_button"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:background="@color/chrome_background"
            android:baselineAlignBottom="true"
            android:contentDescription="@string/empty"
            android:src="@drawable/info_back_selector" />

        <TextView
            android:id="@+id/info_pagename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/info_page_name"
            android:textColor="@color/text"
            android:textSize="@dimen/info_text_large" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:paddingLeft="50dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="@dimen/info_image_width"
            android:layout_height="@dimen/info_image_height"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:background="@color/app_background"
            android:contentDescription="@string/empty" />

        <TableLayout
            android:id="@+id/TableLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView1"
            android:layout_alignTop="@+id/imageView1"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/imageView1" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/info_row_marggin" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_originname"
                    android:textColor="@color/text_dark"
                    android:textSize="@dimen/info_text_small" />

                <TextView
                    android:id="@+id/info_originname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_dark"
                    android:textSize="@dimen/info_text_small" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/info_row_marggin" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_author"
                    android:textColor="@color/text_dark"
                    android:textSize="@dimen/info_text_small" />

                <TextView
                    android:id="@+id/info_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_dark"
                    android:textSize="@dimen/info_text_small" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/info_row_marggin" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_translator"
                    android:textColor="@color/text_dark"
                    android:textSize="@dimen/info_text_small" />

                <TextView
                    android:id="@+id/info_translator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_dark"
                    android:textSize="@dimen/info_text_small" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/info_row_marggin" >

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_publisher"
                    android:textColor="@color/text_dark"
                    android:textSize="@dimen/info_text_small" />

                <TextView
                    android:id="@+id/info_publisher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_dark"
                    android:textSize="@dimen/info_text_small" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_publish_year"
                    android:textColor="@color/text_dark"
                    android:textSize="@dimen/info_text_small" />

                <TextView
                    android:id="@+id/info_publish_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_dark"
                    android:textSize="@dimen/info_text_small" />
            </TableRow>
        </TableLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/chrome"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:id="@+id/info_restitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/info_restitle"
            android:textColor="@color/text"
            android:textSize="@dimen/info_text_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:orientation="vertical"
            android:padding="5dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="vertical" 
                android:background="@color/chrome_background">
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout1"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="8dp"
                android:background="@color/chrome"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="40dp"
                android:paddingRight="40dp" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/info_author_intro"
                    android:textColor="@color/text_dark"
                    android:textSize="@dimen/info_text_med" />

                <TextView
                    android:id="@+id/info_author_intro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_dark"
                    android:textSize="@dimen/info_text_med" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/info_intro"
                android:textColor="@color/text_dark"
                android:textSize="@dimen/info_text_med" />

            <TextView
                android:id="@+id/info_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_dark"
                android:textSize="@dimen/info_text_med" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>